[gd_scene load_steps=6 format=3 uid="uid://cybak3h0v08rm"]

[ext_resource type="Texture2D" uid="uid://coidrt05v8vr4" path="res://Art/V1/UIelements/TripleBar.png" id="1_bo05p"]
[ext_resource type="Script" path="res://Scenes/V1/HelperScenes/resource_bars.gd" id="2_34mp3"]
[ext_resource type="Texture2D" uid="uid://ddmqgccuxiwwp" path="res://Art/V1/UIelements/blueBar.png" id="3_t6ywl"]
[ext_resource type="Texture2D" uid="uid://1dbep7t2e6mf" path="res://Art/V1/UIelements/greenBar.png" id="4_x3urg"]
[ext_resource type="Texture2D" uid="uid://c4lad0t7fbur5" path="res://Art/V1/UIelements/brownBar.png" id="5_5nnne"]

[node name="ResourceBars" type="TextureRect"]
texture = ExtResource("1_bo05p")
stretch_mode = 2
script = ExtResource("2_34mp3")

[node name="WaterBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 26.0
offset_right = 191.0
offset_bottom = 38.0
value = 100.0
stretch_margin_left = 100
stretch_margin_top = 100
stretch_margin_right = 100
stretch_margin_bottom = 100
texture_progress = ExtResource("3_t6ywl")

[node name="Label" type="Label" parent="WaterBar"]
layout_mode = 0
offset_left = -1.0
offset_top = -3.0
offset_right = 183.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 13
text = "     100"

[node name="FoodBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 44.0
offset_right = 191.0
offset_bottom = 56.0
value = 55.0
stretch_margin_left = 100
stretch_margin_top = 100
stretch_margin_right = 100
stretch_margin_bottom = 100
texture_progress = ExtResource("4_x3urg")

[node name="Label" type="Label" parent="FoodBar"]
layout_mode = 0
offset_left = -1.0
offset_top = -3.0
offset_right = 183.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 13
text = "     100"

[node name="WoodBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 62.0
offset_right = 191.0
offset_bottom = 74.0
min_value = 1.0
value = 77.0
exp_edit = true
stretch_margin_left = 100
stretch_margin_top = 100
stretch_margin_right = 100
stretch_margin_bottom = 100
texture_progress = ExtResource("5_5nnne")

[node name="Label" type="Label" parent="WoodBar"]
layout_mode = 0
offset_left = -1.0
offset_top = -3.0
offset_right = 183.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 13
text = "     100"

[connection signal="mouse_entered" from="WaterBar" to="." method="_on_water_bar_mouse_entered"]
[connection signal="mouse_exited" from="WaterBar" to="." method="_on_water_bar_mouse_exited"]
[connection signal="mouse_entered" from="FoodBar" to="." method="_on_food_bar_mouse_entered"]
[connection signal="mouse_exited" from="FoodBar" to="." method="_on_food_bar_mouse_exited"]
[connection signal="mouse_entered" from="WoodBar" to="." method="_on_wood_bar_mouse_entered"]
[connection signal="mouse_exited" from="WoodBar" to="." method="_on_wood_bar_mouse_exited"]
